// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game component (character-sheet) => renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "overflow": "hidden",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      onStartShouldSetResponderCapture={[Function]}
      pointerEvents="auto"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 0,
              },
              Object {
                "scaleX": 1,
              },
              Object {
                "scaleY": 1,
              },
              Object {
                "rotate": "0deg",
              },
              Object {
                "skewX": "0deg",
              },
              Object {
                "skewY": "0deg",
              },
            ],
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#141313",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "height": "15%",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#329932",
                "flex": 0,
                "fontFamily": "telegrama_raw",
                "fontSize": 27.546799160701053,
                "height": "20%",
                "includeFontPadding": false,
                "lineHeight": 22,
                "textAlign": "center",
                "textAlignVertical": "bottom",
              }
            }
          >
            Actions: 
            10
          </Text>
          <View
            style={
              Object {
                "alignSelf": "center",
                "flexDirection": "row",
                "height": "30%",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#329932",
                    "flex": 1,
                    "fontFamily": "telegrama_raw",
                    "fontSize": 27.546799160701053,
                    "height": 9,
                    "includeFontPadding": false,
                    "lineHeight": 9,
                    "textAlign": "center",
                    "textAlignVertical": "bottom",
                  }
                }
              >
                [ Character ]
              </Text>
            </View>
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#329932",
                    "flex": 1,
                    "fontFamily": "telegrama_raw",
                    "fontSize": 27.546799160701053,
                    "height": 9,
                    "includeFontPadding": false,
                    "lineHeight": 9,
                    "textAlign": "center",
                    "textAlignVertical": "bottom",
                  }
                }
              >
                Timelines
              </Text>
            </View>
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#329932",
                    "flex": 1,
                    "fontFamily": "telegrama_raw",
                    "fontSize": 27.546799160701053,
                    "height": 9,
                    "includeFontPadding": false,
                    "lineHeight": 9,
                    "textAlign": "center",
                    "textAlignVertical": "bottom",
                  }
                }
              >
                Feed (2)
              </Text>
            </View>
          </View>
          <Image
            source={1}
            style={
              Object {
                "height": "30%",
                "resizeMode": "stretch",
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 2,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#141313",
                "flexDirection": "column",
                "height": "100%",
                "paddingBottom": 5,
                "paddingTop": 5,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#329932",
                  "flex": 0,
                  "flexDirection": "row",
                  "height": 52,
                  "marginBottom": 4,
                  "marginLeft": 15,
                  "marginRight": 15,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                  }
                }
                style={
                  Object {
                    "backgroundColor": "#141313",
                    "borderColor": "black",
                    "borderWidth": 1,
                    "flex": 0,
                    "height": 50,
                    "margin": 1,
                    "overflow": "hidden",
                    "resizeMode": "cover",
                    "width": 50,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "green",
                      "height": "100%",
                      "opacity": 0.5,
                      "width": "100%",
                    }
                  }
                />
              </Image>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#329932",
                    "color": "#141313",
                    "flex": 5,
                    "fontFamily": "telegrama_raw",
                    "fontSize": 45.911331934501746,
                    "textAlign": "center",
                  }
                }
              >
                Aram
              </Text>
            </View>
            <View
              style={
                Object {
                  "backgroundColor": "#329932",
                  "flex": 0,
                  "flexDirection": "row",
                  "height": 52,
                  "marginBottom": 4,
                  "marginLeft": 15,
                  "marginRight": 15,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#329932",
                    "color": "#141313",
                    "flex": 1,
                    "fontFamily": "telegrama_raw",
                    "fontSize": 45.911331934501746,
                    "textAlign": "center",
                  }
                }
              >
                Actions:
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#329932",
                    "color": "#141313",
                    "flex": 1,
                    "fontFamily": "telegrama_raw",
                    "fontSize": 45.911331934501746,
                    "textAlign": "center",
                  }
                }
              >
                10
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "paddingLeft": 15,
                  "paddingRight": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 0,
                    "height": 342.14000000000004,
                    "justifyContent": "center",
                    "marginBottom": 2,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#329932",
                      "borderColor": "#329932",
                      "borderRadius": 0,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "flexDirection": "column",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "height": 35,
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      style={
                        Object {
                          "color": "#0e0e0e",
                          "flex": 7,
                          "fontFamily": "telegrama_raw",
                          "fontSize": 30.607554623001164,
                          "paddingLeft": 5,
                          "textAlign": "left",
                        }
                      }
                    >
                      Items
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      style={
                        Object {
                          "color": "#0e0e0e",
                          "flex": 3,
                          "fontFamily": "telegrama_raw",
                          "fontSize": 30.607554623001164,
                          "textAlign": "center",
                        }
                      }
                    >
                      Cap: 5/8
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "backgroundColor": "#141313",
                        "borderColor": "#141313",
                        "borderRadius": 0,
                        "borderWidth": 0.5,
                        "flex": 13,
                        "flexDirection": "column",
                        "justifyContent": "space-between",
                        "margin": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 0,
                          "flexDirection": "row",
                          "height": 48.690000000000005,
                          "marginTop": 2,
                        }
                      }
                    >
                      <Image
                        source={1}
                        style={
                          Object {
                            "flex": 0,
                            "height": 46.690000000000005,
                            "marginLeft": 4,
                            "marginRight": 4,
                            "resizeMode": "stretch",
                            "width": 46.690000000000005,
                          }
                        }
                      />
                      <View
                        style={
                          Object {
                            "flex": 12,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#00ff00",
                              "flex": 5,
                              "fontFamily": "telegrama_raw",
                              "height": "100%",
                              "paddingLeft": 9,
                              "paddingTop": 3,
                              "textAlignVertical": "center",
                            }
                          }
                        >
                          Steal
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#329932",
                              "flex": 1,
                              "fontFamily": "telegrama_raw",
                              "paddingTop": 5,
                            }
                          }
                        >
                          ?
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        Object {
                          "flex": 0,
                          "flexDirection": "row",
                          "height": 48.690000000000005,
                          "marginTop": 2,
                        }
                      }
                    >
                      <Image
                        source={1}
                        style={
                          Object {
                            "flex": 0,
                            "height": 46.690000000000005,
                            "marginLeft": 4,
                            "marginRight": 4,
                            "resizeMode": "stretch",
                            "width": 46.690000000000005,
                          }
                        }
                      />
                      <View
                        style={
                          Object {
                            "flex": 12,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#329932",
                              "flex": 5,
                              "fontFamily": "telegrama_raw",
                              "height": "100%",
                              "paddingLeft": 9,
                              "paddingTop": 3,
                              "textAlignVertical": "center",
                            }
                          }
                        >
                          Assist
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#329932",
                              "flex": 1,
                              "fontFamily": "telegrama_raw",
                              "paddingTop": 5,
                            }
                          }
                        >
                          ?
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        Object {
                          "flex": 0,
                          "flexDirection": "row",
                          "height": 48.690000000000005,
                          "marginTop": 2,
                        }
                      }
                    >
                      <Image
                        source={1}
                        style={
                          Object {
                            "flex": 0,
                            "height": 46.690000000000005,
                            "marginLeft": 4,
                            "marginRight": 4,
                            "resizeMode": "stretch",
                            "width": 46.690000000000005,
                          }
                        }
                      />
                      <View
                        style={
                          Object {
                            "flex": 12,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#00ff00",
                              "flex": 5,
                              "fontFamily": "telegrama_raw",
                              "height": "100%",
                              "paddingLeft": 9,
                              "paddingTop": 3,
                              "textAlignVertical": "center",
                            }
                          }
                        >
                          Prevent (x2)
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#329932",
                              "flex": 1,
                              "fontFamily": "telegrama_raw",
                              "paddingTop": 5,
                            }
                          }
                        >
                          ?
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        Object {
                          "flex": 0,
                          "flexDirection": "row",
                          "height": 48.690000000000005,
                          "marginTop": 2,
                        }
                      }
                    >
                      <Image
                        source={1}
                        style={
                          Object {
                            "flex": 0,
                            "height": 46.690000000000005,
                            "marginLeft": 4,
                            "marginRight": 4,
                            "resizeMode": "stretch",
                            "width": 46.690000000000005,
                          }
                        }
                      />
                      <View
                        style={
                          Object {
                            "flex": 12,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#00ff00",
                              "flex": 5,
                              "fontFamily": "telegrama_raw",
                              "height": "100%",
                              "paddingLeft": 9,
                              "paddingTop": 3,
                              "textAlignVertical": "center",
                            }
                          }
                        >
                          Reset (x2)
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#329932",
                              "flex": 1,
                              "fontFamily": "telegrama_raw",
                              "paddingTop": 5,
                            }
                          }
                        >
                          ?
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        Object {
                          "flex": 0,
                          "flexDirection": "row",
                          "height": 48.690000000000005,
                          "marginTop": 2,
                        }
                      }
                    >
                      <Image
                        source={1}
                        style={
                          Object {
                            "flex": 0,
                            "height": 46.690000000000005,
                            "marginLeft": 4,
                            "marginRight": 4,
                            "resizeMode": "stretch",
                            "width": 46.690000000000005,
                          }
                        }
                      />
                      <View
                        style={
                          Object {
                            "flex": 12,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#329932",
                              "flex": 5,
                              "fontFamily": "telegrama_raw",
                              "height": "100%",
                              "paddingLeft": 9,
                              "paddingTop": 3,
                              "textAlignVertical": "center",
                            }
                          }
                        >
                          Lock
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#329932",
                              "flex": 1,
                              "fontFamily": "telegrama_raw",
                              "paddingTop": 5,
                            }
                          }
                        >
                          ?
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        Object {
                          "flex": 0,
                          "flexDirection": "row",
                          "height": 48.690000000000005,
                          "marginTop": 2,
                        }
                      }
                    >
                      <Image
                        source={1}
                        style={
                          Object {
                            "flex": 0,
                            "height": 46.690000000000005,
                            "marginLeft": 4,
                            "marginRight": 4,
                            "resizeMode": "stretch",
                            "width": 46.690000000000005,
                          }
                        }
                      />
                      <View
                        style={
                          Object {
                            "flex": 12,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#329932",
                              "flex": 5,
                              "fontFamily": "telegrama_raw",
                              "height": "100%",
                              "paddingLeft": 9,
                              "paddingTop": 3,
                              "textAlignVertical": "center",
                            }
                          }
                        >
                          Unlock
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#329932",
                              "flex": 1,
                              "fontFamily": "telegrama_raw",
                              "paddingTop": 5,
                            }
                          }
                        >
                          ?
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "marginTop": 2,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#329932",
                      "borderColor": "#329932",
                      "borderRadius": 0,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "flexDirection": "column",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "height": 35,
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      style={
                        Object {
                          "color": "#0e0e0e",
                          "flex": 7,
                          "fontFamily": "telegrama_raw",
                          "fontSize": 30.607554623001164,
                          "textAlign": "center",
                        }
                      }
                    >
                      Iterations
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "backgroundColor": "#141313",
                        "borderColor": "#141313",
                        "borderRadius": 0,
                        "borderWidth": 0.5,
                        "flex": 13,
                        "flexDirection": "column",
                        "justifyContent": "space-between",
                        "margin": 1,
                      }
                    }
                  >
                    <RCTScrollView>
                      <View>
                        <View
                          accessibilityComponentType={undefined}
                          accessibilityLabel={undefined}
                          accessibilityTraits={undefined}
                          accessible={true}
                          hasTVPreferredFocus={undefined}
                          hitSlop={undefined}
                          isTVSelectable={true}
                          onLayout={undefined}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              undefined,
                            ]
                          }
                          testID={undefined}
                          tvParallaxProperties={undefined}
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "center",
                                "flexDirection": "column",
                                "height": 53.36,
                                "justifyContent": "space-around",
                              }
                            }
                          >
                            <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                Object {
                                  "color": "#00ff00",
                                  "flex": 1,
                                  "fontFamily": "telegrama_raw",
                                  "fontSize": 15.303777311500582,
                                  "marginTop": 5,
                                  "paddingRight": 9,
                                  "paddingTop": 2,
                                  "textAlign": "center",
                                }
                              }
                            >
                              Timeline 1
                            </Text>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "justifyContent": "space-around",
                                }
                              }
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                style={
                                  Object {
                                    "color": "#329932",
                                    "flex": 1,
                                    "fontFamily": "telegrama_raw",
                                    "fontSize": 12.243021849200467,
                                    "marginLeft": 9,
                                    "paddingTop": 2,
                                    "textAlign": "center",
                                    "textAlignVertical": "center",
                                  }
                                }
                              >
                                Resetting
                              </Text>
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                style={
                                  Object {
                                    "color": "#329932",
                                    "flex": 7,
                                    "fontFamily": "telegrama_raw",
                                    "fontSize": 12.243021849200467,
                                    "paddingTop": 2,
                                    "textAlign": "center",
                                    "textAlignVertical": "center",
                                  }
                                }
                              >
                                | |==------------------------------------------------|   1% 00:01:39
                              </Text>
                            </View>
                          </View>
                        </View>
                        <View
                          accessibilityComponentType={undefined}
                          accessibilityLabel={undefined}
                          accessibilityTraits={undefined}
                          accessible={true}
                          hasTVPreferredFocus={undefined}
                          hitSlop={undefined}
                          isTVSelectable={true}
                          onLayout={undefined}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              undefined,
                            ]
                          }
                          testID={undefined}
                          tvParallaxProperties={undefined}
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "alignSelf": "center",
                                "flexDirection": "column",
                                "height": 53.36,
                                "justifyContent": "space-around",
                              }
                            }
                          >
                            <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                Object {
                                  "color": "#00ff00",
                                  "flex": 1,
                                  "fontFamily": "telegrama_raw",
                                  "fontSize": 15.303777311500582,
                                  "marginTop": 5,
                                  "paddingRight": 9,
                                  "paddingTop": 2,
                                  "textAlign": "center",
                                }
                              }
                            >
                              Timeline 2
                            </Text>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "justifyContent": "space-around",
                                }
                              }
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                style={
                                  Object {
                                    "color": "#329932",
                                    "flex": 1,
                                    "fontFamily": "telegrama_raw",
                                    "fontSize": 12.243021849200467,
                                    "marginLeft": 9,
                                    "paddingTop": 2,
                                    "textAlign": "center",
                                    "textAlignVertical": "center",
                                  }
                                }
                              >
                                Locking
                              </Text>
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                style={
                                  Object {
                                    "color": "#329932",
                                    "flex": 7,
                                    "fontFamily": "telegrama_raw",
                                    "fontSize": 12.243021849200467,
                                    "paddingTop": 2,
                                    "textAlign": "center",
                                    "textAlignVertical": "center",
                                  }
                                }
                              >
                                | |==------------------------------------------------|   1% 00:06:39
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTScrollView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Game component (timeline-grid) => renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "overflow": "hidden",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      onStartShouldSetResponderCapture={[Function]}
      pointerEvents="auto"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 0,
              },
              Object {
                "scaleX": 1,
              },
              Object {
                "scaleY": 1,
              },
              Object {
                "rotate": "0deg",
              },
              Object {
                "skewX": "0deg",
              },
              Object {
                "skewY": "0deg",
              },
            ],
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#141313",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "height": "15%",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#329932",
                "flex": 0,
                "fontFamily": "telegrama_raw",
                "fontSize": 27.546799160701053,
                "height": "20%",
                "includeFontPadding": false,
                "lineHeight": 22,
                "textAlign": "center",
                "textAlignVertical": "bottom",
              }
            }
          >
            Actions: 
            10
          </Text>
          <View
            style={
              Object {
                "alignSelf": "center",
                "flexDirection": "row",
                "height": "30%",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#329932",
                    "flex": 1,
                    "fontFamily": "telegrama_raw",
                    "fontSize": 27.546799160701053,
                    "height": 9,
                    "includeFontPadding": false,
                    "lineHeight": 9,
                    "textAlign": "center",
                    "textAlignVertical": "bottom",
                  }
                }
              >
                Character
              </Text>
            </View>
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#329932",
                    "flex": 1,
                    "fontFamily": "telegrama_raw",
                    "fontSize": 27.546799160701053,
                    "height": 9,
                    "includeFontPadding": false,
                    "lineHeight": 9,
                    "textAlign": "center",
                    "textAlignVertical": "bottom",
                  }
                }
              >
                [ Timelines ]
              </Text>
            </View>
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#329932",
                    "flex": 1,
                    "fontFamily": "telegrama_raw",
                    "fontSize": 27.546799160701053,
                    "height": 9,
                    "includeFontPadding": false,
                    "lineHeight": 9,
                    "textAlign": "center",
                    "textAlignVertical": "bottom",
                  }
                }
              >
                Feed (2)
              </Text>
            </View>
          </View>
          <Image
            source={1}
            style={
              Object {
                "height": "30%",
                "resizeMode": "stretch",
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 2,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#141313",
                "flexDirection": "column",
                "height": "100%",
                "paddingBottom": 5,
                "paddingTop": 5,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 2,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                }
              }
            >
              <RCTScrollView>
                <View>
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hasTVPreferredFocus={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        undefined,
                      ]
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#329932",
                            "borderColor": "#329932",
                            "borderRadius": 0,
                            "borderWidth": 0.5,
                            "flex": 1,
                            "flexDirection": "column",
                            "height": 120,
                            "marginBottom": 7,
                            "width": "100%",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "height": 35,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <Image
                            source={1}
                            style={
                              Object {
                                "backgroundColor": "#141313",
                                "borderColor": "black",
                                "borderWidth": 1,
                                "flex": 0,
                                "height": 32,
                                "margin": 1,
                                "resizeMode": "contain",
                                "width": 32,
                              }
                            }
                          />
                          <Text
                            accessible={true}
                            allowFontScaling={true}
                            ellipsizeMode="tail"
                            numberOfLines={1}
                            style={
                              Object {
                                "color": "#0e0e0e",
                                "flex": 7,
                                "fontFamily": "telegrama_raw",
                                "fontSize": 30.607554623001164,
                                "textAlign": "center",
                              }
                            }
                          >
                            Timeline 1
                          </Text>
                        </View>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#141313",
                              "borderColor": "#141313",
                              "borderRadius": 0,
                              "borderWidth": 0.5,
                              "flex": 13,
                              "flexDirection": "column",
                              "justifyContent": "space-between",
                              "margin": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "flexDirection": "row",
                                "justifyContent": "center",
                              }
                            }
                          >
                            <Image
                              source={
                                Object {
                                  "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 30,
                                  "margin": 4,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "green",
                                    "height": "100%",
                                    "opacity": 0.5,
                                    "width": "100%",
                                  }
                                }
                              />
                            </Image>
                            <Image
                              source={
                                Object {
                                  "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 30,
                                  "margin": 4,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "green",
                                    "height": "100%",
                                    "opacity": 0.5,
                                    "width": "100%",
                                  }
                                }
                              />
                            </Image>
                            <Image
                              source={
                                Object {
                                  "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 30,
                                  "margin": 4,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "green",
                                    "height": "100%",
                                    "opacity": 0.5,
                                    "width": "100%",
                                  }
                                }
                              />
                            </Image>
                            <Image
                              source={
                                Object {
                                  "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 30,
                                  "margin": 4,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "green",
                                    "height": "100%",
                                    "opacity": 0.5,
                                    "width": "100%",
                                  }
                                }
                              />
                            </Image>
                          </View>
                        </View>
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#141313",
                            "flex": 0,
                            "height": 120,
                            "marginBottom": 7,
                            "opacity": 0.7,
                            "position": "absolute",
                            "width": "100%",
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "alignSelf": "center",
                              "color": "#329932",
                              "fontFamily": "telegrama_raw",
                              "fontSize": 153.03777311500582,
                              "height": "100%",
                              "textAlignVertical": "center",
                            }
                          }
                        >
                          LOCKED
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hasTVPreferredFocus={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        undefined,
                      ]
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#329932",
                            "borderColor": "#329932",
                            "borderRadius": 0,
                            "borderWidth": 0.5,
                            "flex": 1,
                            "flexDirection": "column",
                            "height": 120,
                            "marginBottom": 7,
                            "width": "100%",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "height": 35,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <Image
                            source={1}
                            style={
                              Object {
                                "backgroundColor": "#141313",
                                "borderColor": "black",
                                "borderWidth": 1,
                                "flex": 0,
                                "height": 32,
                                "margin": 1,
                                "resizeMode": "contain",
                                "width": 32,
                              }
                            }
                          />
                          <Text
                            accessible={true}
                            allowFontScaling={true}
                            ellipsizeMode="tail"
                            numberOfLines={1}
                            style={
                              Object {
                                "color": "#0e0e0e",
                                "flex": 7,
                                "fontFamily": "telegrama_raw",
                                "fontSize": 30.607554623001164,
                                "textAlign": "center",
                              }
                            }
                          >
                            Timeline 2
                          </Text>
                        </View>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#141313",
                              "borderColor": "#141313",
                              "borderRadius": 0,
                              "borderWidth": 0.5,
                              "flex": 13,
                              "flexDirection": "column",
                              "justifyContent": "space-between",
                              "margin": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "flexDirection": "row",
                                "justifyContent": "center",
                              }
                            }
                          >
                            <Image
                              source={
                                Object {
                                  "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 30,
                                  "margin": 4,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "green",
                                    "height": "100%",
                                    "opacity": 0.5,
                                    "width": "100%",
                                  }
                                }
                              />
                            </Image>
                            <Image
                              source={
                                Object {
                                  "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 30,
                                  "margin": 4,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "green",
                                    "height": "100%",
                                    "opacity": 0.5,
                                    "width": "100%",
                                  }
                                }
                              />
                            </Image>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hasTVPreferredFocus={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        undefined,
                      ]
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#329932",
                            "borderColor": "#329932",
                            "borderRadius": 0,
                            "borderWidth": 0.5,
                            "flex": 1,
                            "flexDirection": "column",
                            "height": 120,
                            "marginBottom": 7,
                            "width": "100%",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "height": 35,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <Image
                            source={1}
                            style={
                              Object {
                                "backgroundColor": "#141313",
                                "borderColor": "black",
                                "borderWidth": 1,
                                "flex": 0,
                                "height": 32,
                                "margin": 1,
                                "resizeMode": "contain",
                                "width": 32,
                              }
                            }
                          />
                          <Text
                            accessible={true}
                            allowFontScaling={true}
                            ellipsizeMode="tail"
                            numberOfLines={1}
                            style={
                              Object {
                                "color": "#0e0e0e",
                                "flex": 7,
                                "fontFamily": "telegrama_raw",
                                "fontSize": 30.607554623001164,
                                "textAlign": "center",
                              }
                            }
                          >
                            Timeline 3
                          </Text>
                        </View>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#141313",
                              "borderColor": "#141313",
                              "borderRadius": 0,
                              "borderWidth": 0.5,
                              "flex": 13,
                              "flexDirection": "column",
                              "justifyContent": "space-between",
                              "margin": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "flexDirection": "row",
                                "justifyContent": "center",
                              }
                            }
                          >
                            <Image
                              source={
                                Object {
                                  "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 30,
                                  "margin": 4,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "green",
                                    "height": "100%",
                                    "opacity": 0.5,
                                    "width": "100%",
                                  }
                                }
                              />
                            </Image>
                            <Image
                              source={
                                Object {
                                  "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 30,
                                  "margin": 4,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "green",
                                    "height": "100%",
                                    "opacity": 0.5,
                                    "width": "100%",
                                  }
                                }
                              />
                            </Image>
                            <Image
                              source={
                                Object {
                                  "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 30,
                                  "margin": 4,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "green",
                                    "height": "100%",
                                    "opacity": 0.5,
                                    "width": "100%",
                                  }
                                }
                              />
                            </Image>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hasTVPreferredFocus={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        undefined,
                      ]
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#329932",
                            "borderColor": "#329932",
                            "borderRadius": 0,
                            "borderWidth": 0.5,
                            "flex": 1,
                            "flexDirection": "column",
                            "height": 120,
                            "marginBottom": 7,
                            "width": "100%",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "height": 35,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <Image
                            source={1}
                            style={
                              Object {
                                "backgroundColor": "#141313",
                                "borderColor": "black",
                                "borderWidth": 1,
                                "flex": 0,
                                "height": 32,
                                "margin": 1,
                                "resizeMode": "contain",
                                "width": 32,
                              }
                            }
                          />
                          <Text
                            accessible={true}
                            allowFontScaling={true}
                            ellipsizeMode="tail"
                            numberOfLines={1}
                            style={
                              Object {
                                "color": "#0e0e0e",
                                "flex": 7,
                                "fontFamily": "telegrama_raw",
                                "fontSize": 30.607554623001164,
                                "textAlign": "center",
                              }
                            }
                          >
                            Timeline 4
                          </Text>
                        </View>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#141313",
                              "borderColor": "#141313",
                              "borderRadius": 0,
                              "borderWidth": 0.5,
                              "flex": 13,
                              "flexDirection": "column",
                              "justifyContent": "space-between",
                              "margin": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "flexDirection": "row",
                                "justifyContent": "center",
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </RCTScrollView>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": "20%",
                    "resizeMode": "stretch",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "paddingLeft": 15,
                    "paddingRight": 15,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 2,
                      "marginTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "borderColor": "#329932",
                        "borderLeftWidth": 1,
                        "borderRightWidth": 1,
                        "borderTopWidth": 1,
                        "flex": 1,
                        "flexDirection": "column",
                        "height": "100%",
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      accessibilityComponentType={undefined}
                      accessibilityLabel={undefined}
                      accessibilityTraits={undefined}
                      accessible={true}
                      hasTVPreferredFocus={undefined}
                      hitSlop={undefined}
                      isTVSelectable={true}
                      onLayout={undefined}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Array [
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "backgroundColor": "#329932",
                            "flex": 1,
                            "height": "100%",
                            "justifyContent": "center",
                            "width": "100%",
                          },
                        ]
                      }
                      testID={undefined}
                      tvParallaxProperties={undefined}
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "color": "#0e0e0e",
                            "fontFamily": "telegrama_raw",
                            "fontSize": 45.911331934501746,
                            "textAlign": "center",
                            "textAlignVertical": "center",
                          }
                        }
                      >
                        all timelines
                      </Text>
                    </View>
                    <View
                      accessibilityComponentType={undefined}
                      accessibilityLabel={undefined}
                      accessibilityTraits={undefined}
                      accessible={true}
                      hasTVPreferredFocus={undefined}
                      hitSlop={undefined}
                      isTVSelectable={true}
                      onLayout={undefined}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Array [
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "backgroundColor": "#141313",
                            "borderBottomColor": "#329932",
                            "borderBottomWidth": 1,
                            "flex": 1,
                            "height": "100%",
                            "justifyContent": "center",
                            "width": "100%",
                          },
                        ]
                      }
                      testID={undefined}
                      tvParallaxProperties={undefined}
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "color": "#329932",
                            "fontFamily": "telegrama_raw",
                            "fontSize": 45.911331934501746,
                            "textAlign": "center",
                            "textAlignVertical": "center",
                          }
                        }
                      >
                        my timelines
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "marginLeft": 4,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "flex": 1,
                      "marginTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "borderColor": "#329932",
                        "borderLeftWidth": 1,
                        "borderRightWidth": 1,
                        "borderTopWidth": 1,
                        "flex": 1,
                        "flexDirection": "column",
                        "height": "100%",
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      accessibilityComponentType={undefined}
                      accessibilityLabel={undefined}
                      accessibilityTraits={undefined}
                      accessible={true}
                      hasTVPreferredFocus={undefined}
                      hitSlop={undefined}
                      isTVSelectable={true}
                      onLayout={undefined}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Array [
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "backgroundColor": "#329932",
                            "flex": 1,
                            "height": "100%",
                            "justifyContent": "center",
                            "width": "100%",
                          },
                        ]
                      }
                      testID={undefined}
                      tvParallaxProperties={undefined}
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "color": "#0e0e0e",
                            "fontFamily": "telegrama_raw",
                            "fontSize": 45.911331934501746,
                            "textAlign": "center",
                            "textAlignVertical": "center",
                          }
                        }
                      >
                        name
                      </Text>
                    </View>
                    <View
                      accessibilityComponentType={undefined}
                      accessibilityLabel={undefined}
                      accessibilityTraits={undefined}
                      accessible={true}
                      hasTVPreferredFocus={undefined}
                      hitSlop={undefined}
                      isTVSelectable={true}
                      onLayout={undefined}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Array [
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "backgroundColor": "#141313",
                            "borderBottomColor": "#329932",
                            "borderBottomWidth": 1,
                            "flex": 1,
                            "height": "100%",
                            "justifyContent": "center",
                            "width": "100%",
                          },
                        ]
                      }
                      testID={undefined}
                      tvParallaxProperties={undefined}
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "color": "#329932",
                            "fontFamily": "telegrama_raw",
                            "fontSize": 45.911331934501746,
                            "textAlign": "center",
                            "textAlignVertical": "center",
                          }
                        }
                      >
                        type
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
